2.195     2009-06-07
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          add /usr/sbin/sendmail as last place to always look for sendmail

2.194     2009-01-02
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          attempt to fix "smtp client never sends QUIT"

2.193     2008-12-19
          ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

          long-overdue application of patch from RUZ to correct error from
          Sendmail mailer (thanks, RUZ!)

2.192     2007-11-01
          horrible hack to fix regrettable decision in use of Module::Pluggable
            (see https://rt.cpan.org/Ticket/Display.html?id=30183)

2.191     2007-10-21
          use Test mailer, not IO::All, to test internal interfaces
            (thanks, Andreas)

2.190     2007-09-18
          fix bugs exposed by new Test::More

2.189     2007-09-17
          fix bugs exposed by new Test::More

2.188     2007-06-19
          added ->deliveries to Test mailer

2.187     2007-04-05
          Email::Send::IO removed to Email-Send-IO distribution

2.186     2007-04-02
          fix test libraries to work on 5.005

2.185     2006-02-05
          no code changes, only test changes
          use UNLINK not CLEANUP for File::Temp::tempfile

2.184     2006-02-05
          no code changes, only test changes
          create tempdirs under t, in case TMPDIR or /tmp is noexec
          (spotted by MST)

2.183     2006-12-14
          fix test skip error on Win32; claimed to skip 1, then skipped 2
          thanks for the test report, Steffen Mueller!

2.182     2006-12-07
          skip/fix some tests on Win32
          move to/from finding to another method in ::SMTP

2.181     2006-11-25
          remove dependency on Class::Accessor::Fast, which broke its $VERSION

2.180     2006-08-23

          add support for TLS SMTP, based on a patch by Fayland Lam

2.171     2006-07-29

          improve tests and contents, giving up on Test::Without::Module
