@@ -2,7 +2,7 @@ NAME
     Email::Send - Simply Sending Email
 
 VERSION
-    2.194
+    2.195
 
 SYNOPSIS
       use Email::Send;
